unpackaged/main/default/objects/bt_paylink__PayLink_Configuration__c/bt_paylink__PayLink_Configuration__c.object-meta.xml
<CustomObject>
    <description>Beautiful payment requests on any device at any time with Blackthorn | Payments.</description>
    <label>PayLink Configuration</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PayLink Configuration</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>