unpackaged/main/default/objects/bt_paylink__PayLink_Configuration__c/fields/bt_paylink__ACH_Acceptance_Language__c.field-meta.xml
<CustomField>
    <fullName>bt_paylink__ACH_Acceptance_Language__c</fullName>
    <inlineHelpText>This language will appear for acceptance of the payment method</inlineHelpText>
    <label>Acceptance Language</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>