unpackaged/main/default/objects/bt_paylink__PayLink_Configuration__c/fields/bt_paylink__Allowed_Payment_Methods__c.field-meta.xml
<CustomField>
    <fullName>bt_paylink__Allowed_Payment_Methods__c</fullName>
    <description>Select the type(s) of Payment Method(s) to allow when using this configuration. If one is not allowed on this configuration but the Transaction allows it, it still won&#39;t be available on the Transaction, if none set on the transaction these will be allowed</description>
    <inlineHelpText>Select the type(s) of Payment Method(s) to allow when using this configuration. If one is not allowed on this configuration but the Transaction allows it, it still won&#39;t be available on the Transaction, if none set on the transaction these will be allowed</inlineHelpText>
    <label>Allowed Payment Methods</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Charge Card</fullName>
            </value>
            <value>
                <fullName>ACH</fullName>
            </value>
            <value>
                <fullName>Stripe Checkout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>