unpackaged/main/default/objects/bt_paylink__PayLink_Configuration__c/fields/bt_paylink__Background_Color__c.field-meta.xml
<CustomField>
    <fullName>bt_paylink__Background_Color__c</fullName>
    <description>You can define a solid background color instead of a background image. Enter a 6 digit HEX code without the &quot;#&quot; character.</description>
    <inlineHelpText>You can define a solid background color instead of a background image. Enter a 6 digit HEX code without the &quot;#&quot; character.</inlineHelpText>
    <label>Background Color (#)</label>
    <length>6</length>
    <type>Text</type>
</CustomField>