unpackaged/main/default/objects/bt_paylink__PayLink_Configuration__c/fields/bt_paylink__Background_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>bt_paylink__Background_Image_URL__c</fullName>
    <description>Make sure you host your background image on a secure server with &quot;https&quot; otherwise our SSL will not work properly (You can upload an externally available image to Salesforce under the Documents tab, right click on the image and copy paste the SSL URL).</description>
    <inlineHelpText>Make sure you host your background image on a secure server with &quot;https&quot; otherwise our SSL will not work properly (You can upload an externally available image to Salesforce under the Documents tab, right click on the image and copy paste the SSL URL).</inlineHelpText>
    <label>Background Image (URL)</label>
    <type>Url</type>
</CustomField>