unpackaged/main/default/objects/bt_paylink__PayLink_Configuration__c/fields/bt_paylink__Button_Color__c.field-meta.xml
<CustomField>
    <fullName>bt_paylink__Button_Color__c</fullName>
    <description>Set a custom color for the button. Enter a 6 digit HEX code without the &quot;#&quot; character.</description>
    <inlineHelpText>Set a custom color for the button. Enter a 6 digit HEX code without the &quot;#&quot; character.</inlineHelpText>
    <label>Button Color (#)</label>
    <length>6</length>
    <type>Text</type>
</CustomField>