unpackaged/main/default/objects/bt_paylink__PayLink_Configuration__c/fields/bt_paylink__Card_Color_Theme__c.field-meta.xml
<CustomField>
    <fullName>bt_paylink__Card_Color_Theme__c</fullName>
    <description>Sets the card color theme to light or dark in PayLink. This will be applied to the text color on the card.</description>
    <inlineHelpText>Sets the card color theme to light or dark in PayLink. This will be applied to the text color on the card.</inlineHelpText>
    <label>Card Color Theme</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Light</fullName>
            </value>
            <value>
                <fullName>Dark</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>