unpackaged/main/default/objects/bt_paylink__PayLink_Configuration__c/fields/bt_paylink__Currency_Display__c.field-meta.xml
<CustomField>
    <fullName>bt_paylink__Currency_Display__c</fullName>
    <description>Use Symbol to display &quot;$199.00&quot; or ISO to display &quot;199.00 USD&quot;.</description>
    <inlineHelpText>Use Symbol to display &quot;$199.00&quot; or ISO to display &quot;199.00 USD&quot;.</inlineHelpText>
    <label>Currency Display</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Symbol</fullName>
                <default>true</default>
                <label>Symbol</label>
            </value>
            <value>
                <fullName>ISO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>