unpackaged/main/default/objects/bt_paylink__PayLink_Configuration__c/fields/bt_paylink__Data_Dictionary_Group__c.field-meta.xml
<CustomField>
    <fullName>bt_paylink__Data_Dictionary_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Data Dictionary Group containing the Data Dictionary Entries with translated labels.</description>
    <inlineHelpText>Select the appropriate Data Dictionary Group containing the translated override values for the chosen Display Language.</inlineHelpText>
    <label>Data Dictionary Group</label>
    <referenceTo>bt_stripe__Data_Dictionary_Group__c</referenceTo>
    <relationshipLabel>PayLink Configuration</relationshipLabel>
    <relationshipName>PayLink_Configuration</relationshipName>
    <type>Lookup</type>
</CustomField>