unpackaged/main/default/objects/bt_paylink__PayLink_Configuration__c/fields/bt_paylink__Default__c.field-meta.xml
<CustomField>
    <fullName>bt_paylink__Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set automatically on Transaction creation (unless a value exists or overwrites it). May also be used if the PayLink configuration is blank.</description>
    <inlineHelpText>Set automatically on Transaction creation (unless a value exists or overwrites it). May also be used if the PayLink configuration is blank.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>