unpackaged/main/default/objects/bt_paylink__PayLink_Configuration__c/fields/bt_paylink__Display_Language__c.field-meta.xml
<CustomField>
    <fullName>bt_paylink__Display_Language__c</fullName>
    <description>List of supported display languages for Paylink.</description>
    <inlineHelpText>Select language to be displayed to the user when using this Paylink configuration. Defaults to English if left blank.</inlineHelpText>
    <label>Display Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>bt_paylink__Languages</valueSetName>
    </valueSet>
</CustomField>