unpackaged/main/default/objects/bt_paylink__PayLink_Configuration__c/fields/bt_paylink__Due_Date_Label__c.field-meta.xml
<CustomField>
    <fullName>bt_paylink__Due_Date_Label__c</fullName>
    <description>Overrides the Due Date label</description>
    <inlineHelpText>Overrides the Due Date label</inlineHelpText>
    <label>Due Date Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>