unpackaged/main/default/objects/bt_paylink__PayLink_Configuration__c/fields/bt_paylink__Logo_URL__c.field-meta.xml
<CustomField>
    <fullName>bt_paylink__Logo_URL__c</fullName>
    <description>Important: Make sure you host your logo on a secure server with &quot;https&quot; otherwise our SSL will not work properly (You can upload an externally available image to Salesforce under the Documents tab, right click on the image and copy paste the SSL URL)</description>
    <inlineHelpText>Important: Make sure you host your logo on a secure server with &quot;https&quot; otherwise our SSL will not work properly (You can upload an externally available image to Salesforce under the Documents tab, right click on the image and copy paste the SSL URL)</inlineHelpText>
    <label>Logo (URL)</label>
    <type>Url</type>
</CustomField>