unpackaged/main/default/objects/bt_paylink__PayLink_Configuration__c/fields/bt_paylink__Overlay_2_Color__c.field-meta.xml
<CustomField>
    <fullName>bt_paylink__Overlay_2_Color__c</fullName>
    <description>You can define an overlay on top of your background image. Enter a 6 digit HEX code without the &quot;#&quot; character and use the &quot;Overlay 2 Opacity&quot; field to set the opacity of this solid color.</description>
    <inlineHelpText>You can define an overlay on top of your background image. Enter a 6 digit HEX code without the &quot;#&quot; character and use the &quot;Overlay 2 Opacity&quot; field to set the opacity of this solid color.</inlineHelpText>
    <label>Overlay 2 Color (#)</label>
    <length>6</length>
    <type>Text</type>
</CustomField>