unpackaged/main/default/objects/bt_paylink__PayLink_Configuration__c/fields/bt_paylink__Overlay_2_Opacity__c.field-meta.xml
<CustomField>
    <fullName>bt_paylink__Overlay_2_Opacity__c</fullName>
    <description>You can set an opacity for the Color 2 Overlay by entering a percentage (0-99%). 99% means it&#39;s almost fully transparent.</description>
    <inlineHelpText>You can set an opacity for the Color 2 Overlay by entering a percentage (0-99%). 99% means it&#39;s almost fully transparent.</inlineHelpText>
    <label>Overlay 2 Opacity (%)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>