unpackaged/main/default/objects/bt_paylink__PayLink_Configuration__c/fields/bt_paylink__Requested_By_Label__c.field-meta.xml
<CustomField>
    <fullName>bt_paylink__Requested_By_Label__c</fullName>
    <description>Overrides the Requested By label</description>
    <inlineHelpText>Overrides the Requested By label</inlineHelpText>
    <label>Requested By Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>