unpackaged/main/default/objects/bt_paylink__PayLink_Configuration__c/listViews/bt_paylink__All.listView-meta.xml
<ListView>
    <fullName>bt_paylink__All</fullName>
    <columns>NAME</columns>
    <columns>bt_paylink__Default__c</columns>
    <columns>bt_paylink__Allowed_Payment_Methods__c</columns>
    <columns>bt_paylink__Background_Color__c</columns>
    <columns>bt_paylink__Background_Image_URL__c</columns>
    <columns>bt_paylink__Currency_Display__c</columns>
    <columns>bt_paylink__Logo_URL__c</columns>
    <columns>bt_paylink__Overlay_1_Color__c</columns>
    <columns>bt_paylink__Overlay_1_Opacity__c</columns>
    <columns>bt_paylink__Overlay_2_Color__c</columns>
    <columns>bt_paylink__Overlay_2_Opacity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>